k8s/istio/ingress-remove-sensitive-headers.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: remove-sensitive-response-headers
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      istio: ingressgateway

  configPatches:
    - applyTo: ROUTE_CONFIGURATION
      match:
        context: GATEWAY
        routeConfiguration:
          portNumber: 80
      patch:
        operation: MERGE
        value:
          response_headers_to_remove:
            - x-auth-request-access-token
